SystemUI: RefreshRateTile: improve and support for multiple peak refresh rates
* Logic for properly acquiring multiple peak refresh rates taken from https://github.com/LineageOS/android_packages_apps_Settings/commit/08c1661b72263eec5c5fdf1cc35d85612f5751c1
* Added device config listener and simplified mode cycling

Co-authored-by: Michael Bestas <mkbestas@lineageos.org>
Signed-off-by: Alfred Mathew <alfredmathew05@gmail.com>

--- a/packages/SystemUI/res/values/voltage_strings.xml
+++ b/packages/SystemUI/res/values/voltage_strings.xml
@@ -239,6 +239,7 @@
 
     <!-- Refresh Rate Tile -->
     <string name="refresh_rate_tile_label">Refresh rate</string>
-    <string name="auto_mode_label">Auto</string>
+    <string name="refresh_rate_auto_mode_label">Auto</string>
+    <string name="refresh_rate_label_placeholder"><xliff:g id="Refresh Rate">%1$d</xliff:g> Hz</string>
 
 </resources>
