SystemUI: RefreshRateTile: fix mode cycling
* Makes it work hand-in-hand with setting preferences. This is indeed a better logic as well

Signed-off-by: Alfred Mathew <alfredmathew05@gmail.com>

--- a/packages/SystemUI/res/values/voltage_strings.xml
+++ b/packages/SystemUI/res/values/voltage_strings.xml
@@ -239,7 +239,9 @@
 
     <!-- Refresh Rate Tile -->
     <string name="refresh_rate_tile_label">Refresh rate</string>
-    <string name="refresh_rate_auto_mode_label">Auto</string>
-    <string name="refresh_rate_label_placeholder"><xliff:g id="Refresh Rate">%1$d</xliff:g> Hz</string>
+    <string name="refresh_rate_auto_mode_placeholder">
+        Auto (<xliff:g id="min_refresh_rate" example="60">%1$d</xliff:g> - <xliff:g id="max_refresh_rate" example="60">%2$d</xliff:g> Hz)
+    </string>
+    <string name="refresh_rate_forced_mode_placeholder"><xliff:g id="refresh_rate" example="60">%1$d</xliff:g> Hz</string>
 
 </resources>
